<resources>
    <string name="app_name">YNDXRemote</string>
    <!-- Common -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>

    <!-- Login activity -->
    <string name="register_screen_name">Вход в аккаунт</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="loginAction">Войти</string>
    <string name="loginInvalidAccountOrPass">Неверный логин или пароль!</string>
    <string name="loginInvalidCode">Неверный код!</string>
    <string name="loginNotSupported">Вход с паролем не удался! Отключите 2FA, или включите вход по Яндекс.Ключу</string>
    <string name="loginXTokenFailed">Не удалось войти в аккаунт! Попробуйте авторизоваться заново</string>
    <string name="errorNoInternet">Нет подключения к сети!</string>
    <string name="aboutAccount">Об аккаунте</string>
    <string name="logOut">Выйти</string>
    <string name="loginHello">Привет!</string>
    <string name="loginDescription">Это приложение для управления вашей станцией.</string>
    <string name="authFAQ">FAQ по входу</string>
    <string name="telegram">Telegram</string>
    <string name="authCode">Код из бота</string>
    <string name="loginMethodsTitle">Выберите способ входа:</string>
    <string name="loginPasswordCardTitle">По паролю или Яндекс Ключу</string>
    <string name="loginQRCardTitle">По ссылке (QR-коду)</string>
    <string name="loginPasswordTitle">Введите логин и пароль (или одноразовый код):</string>
    <string name="loginQRTitle">Вот ваш QR-код!</string>
    <string name="loginQRDescription">Приложение отсканирует код само (кнопка \"Перейти\" под QR).\nПосле входа нажмите кнопку снизу.</string>
    <string name="saveToGallery">Сохранить</string>
    <string name="QRSavedSuccessfully">QR-код сохранен!</string>
    <string name="permissionRequired">Необходимо дать разрешение!</string>
    <string name="allReady">Все готово!</string>
    <string name="loginQRNotConfirmedError">Вход не был завершен!</string>
    <string name="QRDecodeError">Не получилось сканировать QR код! Попробуйте сами :)</string>
    <string name="moveByLink">Перейти</string>

    <string name="serverDead">Упс… С сервером что-то не так!</string>
    <string name="wtf">WTF</string>

    <!-- Main screen -->
    <string name="devices">Устройства</string>
    <string name="account">Аккаунт</string>

    <string name="noWiFi">Нет соединения!</string>
    <string name="noWiFiDescription">Для работы необходимо\nподключиться к сети WiFi!</string>
    <string name="updateBtn">Обновить</string>
    <string name="loading">Загрузка…</string>

    <string name="online">В сети</string>
    <string name="offline">Не в сети</string>

    <string name="deviceList">Список устройств</string>
    <string name="deviceOffline">Устройство не в сети!</string>
    <string name="noDevices">Сейчас здесь нет устройств.\nПривяжите колонку в приложении\nУмный дом с Алисой</string>

    <!-- Device names -->
    <string name="station">Яндекс Станция</string>
    <string name="station_max">Яндекс Станция Макс</string>
    <string name="station_mini">Яндекс Станция Мини</string>
    <string name="station_lite">Яндекс Станция Лайт</string>
    <string name="station_mini2">Яндекс Станция Мини 2</string>
    <string name="station_2">Яндекс Станция 2</string>
    <string name="station_midi">Яндекс Станция Миди</string>
    <string name="station_duo_max">Яндекс Станция Дуо Макс</string>
    <string name="station_unknown">Колонка с Алисой</string>

    <!-- Device activity -->
    <string name="deviceActivityHeader">Управление станцией</string>
    <string name="enterText">Введите текст</string>
    <string name="enterTextSnackbar">Нельзя отправить пустой текст!</string>
    <string name="containsProhibitedSyms">Текст содержит недопустимые символы!</string>
    <string name="tooLong">Текст длиннее 100 символов!</string>
    <string name="sendTTS">Воспроизвести</string>
    <string name="sendCmd">Отправить</string>
    <string name="sent">Отправлено!</string>

    <string name="playbackPage">Плеер</string>
    <string name="rcPage">Пульт</string>
    <string name="ttsPage">Команды</string>

    <string name="offlineMode">Нет соединения с колонкой!</string>
    <string name="revertToCloud">Соединение с колонкой потеряно! Возврат в облачный режим</string>
    <string name="revertToLocal">Соединение установлено! Локальный режим включен</string>

    <string name="myWave">Моя волна</string>
    <string name="myFavourites">Мне нравится</string>

    <!-- User screen -->
    <string name="codedWithLove">Создано проектом YNDXFuck с ❤️</string>
    <string name="credits"><b>Разработка:</b> <a href="https://github.com/SanyaPilot">SanyaPilot</a>\n
        <b>Дизайн и иконки:</b> <a href="https://t.me/nexussed">nexussed!</a>\n\n
        <b>Спасибо проекту</b>\n
        <a href="https://github.com/AlexxIT/YandexStation">Яндекс.Станция для Home Assistant</a>\n
        за исследование протокола Glagol</string>

    <!-- Device link screen -->
    <string name="linkButton">Привязать</string>
    <string name="linkDevice">Привязка колонки</string>
    <string name="linkDescription">Здесь вы можете привязать колонку к вашему аккаунту</string>
    <string name="whereUDID">Где найти UDID колонки?</string>
    <string name="howToUDID">Узнать его можно, открыв IP адрес Станции в браузере, или посмотрев на наклейке на дне корпуса</string>
    <string name="UDID">UDID колонки</string>
    <string name="linkCode">Код привязки</string>
    <string name="codePlays">Сейчас колонка говорит код</string>
    <string name="missedCode">Не услышали код?\nНажмите на кнопку \"Повторить код\"</string>
    <string name="replayCode">Повторить код</string>
    <string name="startedCodeReplay">Колонка говорит код повторно!</string>

    <!-- Errors -->
    <string name="invalidUDID">Неверный UDID!</string>
    <string name="unauthorizedError">Проблемы с авторизацией!</string>
    <string name="deviceAlreadyLinked">Устройство уже привязано!</string>
    <string name="deviceNotLinked">Устройство не привязано!</string>
    <string name="alreadyRunningError">Колонка уже говорит код!</string>
    <string name="timeoutError">Таймаут! Проблемы с интернетом?</string>
    <string name="parsingError">Произошла ошибка парсинга! Сообщите об этом разработчику</string>
    <string name="unknownError">Произошла неизвестная ошибка! Сообщите об этом разработчику</string>
    <string name="invalidName">Имя может содержать только буквы, цифры, пробелы, скобки и некоторые специальные символы (.,-_[])!</string>
    <string name="syncError">Ошибка синхронизации</string>

    <!-- Device unlink dialog -->
    <string name="unlinkLabel">Отвязать от аккаунта</string>
    <string name="unlinkQuestion">Отвязать устройство?</string>
    <string name="unlinkDescription">После отвязки вы потеряете возможность менять настройки и управлять устройством</string>
    <string name="deviceAlreadyUnlinked">Устройство уже отвязано!</string>

    <!-- Station service -->
    <string name="fetchingData">Подключаемся…</string>
    <string name="idle">Сейчас ничего не играет</string>

    <!-- Settings -->
    <string name="settings">Настройки</string>
    <string name="settingsTitle">Настройки станции</string>
    <string name="jingleLabel">Звук активации Алисы</string>
    <string name="renameLabel">Переименовать</string>
    <string name="currentName">Текущее название:</string>
    <string name="renameDialogTitle">Переименование</string>
    <string name="enterName">Введите название</string>
    <string name="eqLabel">Эквалайзер</string>
    <string name="eqPreset">Пресет</string>
    <string name="dndLabel">Не беспокоить</string>
    <string name="start">Начало</string>
    <string name="stop">Конец</string>
    <string name="startTime">Время начала</string>
    <string name="stopTime">Время окончания</string>
    <string name="currentTime">Текущее время:</string>

    <!-- Screensaver settings -->
    <string name="ssLabel">Заставка картинками</string>
    <string name="ssSupportText">Текущий тип:</string>
    <string name="video">видео</string>
    <string name="images">картинки</string>

    <!-- LED screen settings -->
    <string name="visualizationLabel">Визуализация музыки</string>
    <string name="visualizationRandom">Случайный режим</string>
    <string name="clockTypeLabel">Вид часов на экране</string>
    <string name="ledIdleAnimationLabel">Световая заставка при бездействии</string>
    <string name="screenBrightnessLabel">Яркость экрана</string>
    <string name="screenAutoBrightnessLabel">Подстраивать автоматически</string>

    <!-- St2 LED animations -->
    <string name="visSt2BlinkLabel">Мерцание</string>
    <string name="visSt2LavaLabel">Лава</string>
    <string name="visSt2PolarLabel">Сияние</string>
    <string name="visSt2NoneLabel">Выключено</string>

    <!-- Proximity gestures -->
    <string name="proximityGesturesLabel">Жесты ладонью</string>

    <!-- User settings -->
    <string name="userSettingsTitle">Настройки аккаунта</string>
    <string name="timezoneLabel">Часовой пояс</string>
    <string name="timezoneDescription">Эта настройка влияет на DND</string>
    <string name="spottersLabel">Быстрые команды станции</string>
    <string name="spottersDescription">Можно озвучивать сразу, не говоря \"Алиса\"</string>

    <string name="spottersMusicTitle">Музыка, фильмы и голос</string>
    <string name="spotterPlayAndPauseTitle">Воспроизведение и пауза</string>
    <string name="spotterPlayAndPauseDesc">Стоп, хватит, пауза, продолжи, играй</string>
    <string name="spotterMusicNavigationTitle">Переключение треков и эпизодов</string>
    <string name="spotterMusicNavigationDesc">Дальше, назад, следующий</string>
    <string name="spotterVolumeTitle">Регулировка громкости</string>
    <string name="spotterVolumeDesc">Тише, громче</string>

    <string name="spottersTVTitle">Навигация по интерфейсу</string>
    <string name="spotterTVNavigationTitle">Управление интерфейсом</string>
    <string name="spotterTVNavigationDesc">Выше, ниже, вверх, вниз, вправо, влево</string>
    <string name="spotterBackToHomeTitle">Возврат на домашний экран</string>
    <string name="spotterBackToHomeDesc">Домой</string>

    <string name="spottersSmartHomeTitle">Умный дом</string>
    <string name="spotterLightControlTitle">Управление светом</string>
    <string name="spotterLightControlDesc">Включи свет, выключи свет</string>
    <string name="spotterTVControlTitle">Управление телевизором</string>
    <string name="spotterTVControlDesc">Включи телевизор, выключи телевизор</string>
</resources>