<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_screen.LoginQRFragment">

    <TextView
        android:id="@+id/loginQRDescText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/loginQRTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginQRDescText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loginQRDescription"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginQRDescText" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginQRLinkButton"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginQRDescText2"
        app:layout_constraintVertical_chainStyle="packed">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/loginQRCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/qr_code_2_24" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/loginQRBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/loginQRLinkButton"
        style="@style/IconButtonWithTextOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/moveByLink"
        app:icon="@drawable/link_24"
        app:layout_constraintBottom_toTopOf="@+id/loginQRConfirmButton"
        app:layout_constraintEnd_toStartOf="@+id/loginQRSaveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/loginQRSaveButton"
        style="@style/IconButtonWithTextOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"
        android:text="@string/saveToGallery"
        app:icon="@drawable/save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginQRLinkButton"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/loginQRConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allReady"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>